[package]
name = "vega_core"
version = "0.1.0"
description = "vega protocol core"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vega_core"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
chainlink_solana = "1.0.0"
